Put the background color to crypto section

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ img{
   text-align: center;
 }
 .main-container{
-    background: rgb(41, 40, 40);
+    background: black
   }
   .header-section{
     display: flex;
@@ -56,6 +56,7 @@ img{
     flex-wrap: wrap;
     padding: 6px;
     padding-top: 20px;
+    margin-bottom: 10px;
   }
   .container{
     display: flex;
@@ -108,6 +109,7 @@ img{
   }
   .horizontal{
     min-height: 1px;
+    margin: 0;
     border: 1px solid #666666;
   }
   .btn-register:hover{
@@ -258,6 +260,9 @@ img{
   align-items: center;
   flex-direction: column;
   text-align: center;
+  background-color: #343434;
+ }
+ .started{
   margin-top: 90px;
   margin-bottom: 138px;
  }
