--- a/style.css
+++ b/style.css
@@ -56,7 +56,9 @@ img{
     flex-wrap: wrap;
     padding: 6px;
     padding-top: 20px;
-    margin-bottom: 10px;
+    padding-bottom: 18px;
+    border-bottom: 1px solid #FFFFFF;
+
   }
   .container{
     display: flex;
@@ -70,6 +72,9 @@ img{
     max-width: 656px;
     align-items: center;
     gap: 35px;
+  }
+  .nav-button{
+    gap: 10px
   }
   .product{
     display: flex;
@@ -132,8 +137,9 @@ img{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 100px;
-    margin-bottom: 145px;
+    padding-top: 100px;
+    padding-bottom: 145px;
+    border-bottom: 1px solid #FFFFFF;
   }
   .banner-text{
     max-width: 794px;
@@ -177,6 +183,9 @@ img{
     background: linear-gradient(90deg, #BC67DB 0%, #E91F92 100%);
     border: none;
   }
+  .detail-container{
+    border-bottom: 1px solid #FFFFFF;
+  }
   .details{
     display: flex;
     max-width: 1108px;
@@ -193,15 +202,19 @@ img{
   }
  
   /* Second Section Css */
+  .fingertip{
+    padding-top: 40px;
+    padding-bottom: 100px;
+    border-bottom: 1px solid #FFFFFF;
+  }
   .fingertip-container{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    margin-top: 40px;
-    margin-bottom: 100px;
+    max-width: 1280px;
   }
   .fingertip-text{
-    margin-left: 45px;
+    margin-left: 70px;
+    max-width: 524px;
   }
   .wallet{
     max-width: 542px;
@@ -248,8 +261,8 @@ img{
   margin: 0px;
  }
  .fingertip-img{
-  margin-top: 50px;
-  margin-left: 5px;
+  margin-top: 70px;
+  margin-left: 50px;
   width: 630px;
   height: 527px;
   background-image: url("/Images/fingertip.png");
@@ -261,10 +274,8 @@ img{
   flex-direction: column;
   text-align: center;
   background-color: #343434;
- }
- .started{
-  margin-top: 90px;
-  margin-bottom: 138px;
+  padding: 90px 0px;
+  border-bottom: 1px solid #FFFFFF;
  }
  .minutes{
   margin: 0;
@@ -281,8 +292,26 @@ img{
   flex-direction: column;
   max-width: 270px;
  }
+ .regiter-text{
+  margin: 0;
+  margin-top: 15px;
+ }
+ .lorem{
+  font-size: 13px;
+
+ }
  .note-img{
   max-width: 76px;
   max-height: 76px;
  }
- 
+ /* Plateform section */
+.platform{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.unlimited{
+  max-width: 620px;
+  height: 122px;
+  line-height: 120%;
+}
