--- a/style.css
+++ b/style.css
@@ -305,13 +305,63 @@ img{
   max-height: 76px;
  }
  /* Plateform section */
+ .platform-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: center;
+ }
 .platform{
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 1107px;
+  padding: 82px 0;
+  border-bottom: 1px solid #FFFFFF;
 }
 .unlimited{
-  max-width: 620px;
+  max-width: 590px;
   height: 122px;
   line-height: 120%;
+  font-size: 51px;
+}
+.accest:nth-child(odd) {
+  flex-direction: row-reverse;
+}
+.kompwnd-make{
+  max-width: 422px;
+  line-height: 30px;
+  margin-left: 35px;
+  text-align: left;
+}
+.accest{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 180px;
+}
+.accest-text{
+  margin-top: 80px;
+  max-width: 465px;
+}
+.earn-accest{
+  margin: 0;
+  margin-top: 50px;
+  max-width: 465px;
+  font-size: 51px;
+  text-align: left;
+  line-height: 120%;
+}
+.accest-make{
+  max-width: 408px;
+  line-height: 30px;
+  text-align: left;
+}
+.accest-icon{
+  margin-top: 100px;
+  max-width: 400px;
+  max-height: 421px;
+}
+.accest-img{
+  max-width: 400px;
+  max-height: 421px;
 }
