Set the alignment of some sections

--- a/style.css
+++ b/style.css
@@ -62,10 +62,10 @@ img{
   }
   .container{
     display: flex;
-    justify-content: space-between;
+    gap: 32px;
     margin-left: 20px;
     align-items: center;
-    min-width: 250px;
+    max-width: 250px;
   }
   .navbar{
     display: flex;
@@ -75,7 +75,7 @@ img{
   }
   .nav-button{
     display: flex;
-    gap: 12px
+    gap: 12px;
   }
   .product{
     display: flex;
@@ -134,7 +134,7 @@ img{
     border: 1px solid #666666;
   }
   .banner{
-    display: flex;
+     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -155,7 +155,7 @@ img{
   .economy{
    margin-top: 15px;
    max-width: 569px;
-   margin-left: 123px;
+   margin-left: 60px;
    font-size: 20px;
    line-height: 30px;
    text-align: center;
@@ -268,7 +268,7 @@ img{
  }
  .fingertip-img{
   margin-top: 70px;
-  width: 630px;
+  max-width: 630px;
   height: 527px;
  }
  /* Crypto Section */
@@ -288,6 +288,7 @@ img{
  .crypto-icons{
   display: flex;
   margin-top: 107px;
+  justify-content: center;
   gap: 145px;
   flex-wrap: wrap;
  }
@@ -311,15 +312,13 @@ img{
  }
  /* Plateform section */
  .platform-container{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   border-bottom: 1px solid #FFFFFF;
  }
 .platform{
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: auto;
   max-width: 1107px;
   padding: 40px 0px 110px 0px;
 }
@@ -339,6 +338,7 @@ img{
   display: flex;
   flex-wrap: wrap;
   gap: 180px;
+  justify-content: center;
 }
 .accest:nth-child(odd) {
   flex-direction: row-reverse;
@@ -398,6 +398,7 @@ img{
 .access-card-container{
   display: flex;
   gap: 44px;
+  justify-content: center;
   flex-wrap: wrap;
 }
 .access-card{
@@ -466,7 +467,7 @@ img{
   margin: 0;
   max-width: 590px;
   font-size: 64px;
-line-height: 117%;
+  line-height: 117%;
 }
 .ecosystem{
   font-weight: 500;
@@ -495,7 +496,7 @@ line-height: 117%;
 }
 .alta-img{
   width: 83px;
-height: 39px;
+  height: 39px;
 }
 .btn-tote{
   max-width: 123px;
@@ -564,15 +565,16 @@ height: 39px;
 /* Footer Section */
 .footer-container{
   display: flex;
-  flex-direction: column;
+  flex-direction: column; 
   align-items: center;
   background: #F9F9F9;
-  padding: 50px 200px 100px 100px;
+  padding: 50px;
 }
 .footer-data{
   display: flex;
-  justify-content: space-between;
-  gap:60px;
+  gap: 120px;
+  justify-content: center;
+  flex-wrap: wrap;
   max-width: 1340px;
 }
 .logo-footer{
@@ -583,7 +585,7 @@ height: 39px;
   margin-top: 20px;
   max-width: 173px;
   max-height: 30px;
- font-size: 18px;
+  font-size: 18px;
 }
 .email-ft{
   margin-top: 44px;
